// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox inputProps should pass through other props to the input 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    data-automation="first-name-field"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
      strong={false}
    >
      Still in role
    </Text>
  </label>
</div>
`;

exports[`Checkbox should render full width checkbox 1`] = `
<div
  className="root fullWidth"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
      strong={false}
    >
      Still in role
    </Text>
  </label>
</div>
`;

exports[`Checkbox should render with checkbox put at the end of component 1`] = `
<div
  className="root rtl"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
      strong={false}
    >
      Still in role
    </Text>
  </label>
</div>
`;

exports[`Checkbox should render with className 1`] = `
<div
  className="root testClassname"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
      strong={false}
    >
      Still in role
    </Text>
  </label>
</div>
`;

exports[`Checkbox should render with compact checkbox style 1`] = `
<div
  className="root compact"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={true}
      strong={false}
    >
      Still in role
    </Text>
  </label>
</div>
`;

exports[`Checkbox should render with simple props 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
      strong={false}
    >
      Still in role
    </Text>
  </label>
</div>
`;

exports[`Checkbox should render with standard checkbox style 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="checkBox"
  >
    <Icon
      animation=""
      lineHeight=""
      rotation=""
      size=""
      smoothRotate={false}
      svgClassName="checkMark"
      type="check"
    />
  </div>
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <Text
      baseline={false}
      className="labelText"
      intimate={false}
      strong={false}
    >
      Still in role
    </Text>
  </label>
</div>
`;
